src/styles/css/style.css
body {
  background: url("../img/headerpie.jpg") no-repeat center center fixed;
  background-position: center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  font-size: 1.3rem;
}

a {
  cursor: pointer;
  /* color: #337ab7; */
  text-decoration: none;
  color: black;
  background-color: transparent;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

.help-block {
  font-size: 12px;
}

button,
input {
  margin-top: 10px;
}

.whiteback {
  background-color: rgba(255, 255, 255, 0.6);
  padding: 1rem 1rem;
  width: 50%;
  margin: 20% auto;
  border-radius: 0.3em;
  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
}

.auth_option {
  text-align: center;
}

.auth p {
  color: black;
}

.menu {
  margin-top: 8px;
}

.menu li {
  display: inline;
}

.menu li + li {
  margin-left: 35px;
}

.menu li a {
  color: black;
  font-weight: bold;
  text-decoration: none;
}

/* .container {
  width: 940px;
  margin: 0 auto;
} */
/* React modal CSS */
.ReactModal__Content {
  opacity: 0;
}

.ReactModal__Content--after-open {
  opacity: 1;
  transition: opacity 150ms;
  background: white;
}

.ReactModal__Content--before-close {
  opacity: 0;
}

.col-sm-4 {
  background-color: rgba(255, 255, 255, 0.6);
  padding: 1rem;
}
.col-sm-8 {
  background-color: rgba(255, 255, 255, 0.6);
  padding: 1rem;
}

.block {
  width: 220px;
  height: 2rem;
  margin: 0.5rem;
  display: inline-block;
  background: #00cc99;
  border-radius: 8px;
}
/* #4E5842 */

.iconpos {
  margin: 0 auto;
}

.Collapsible {
  border-radius: 0px;
  border-color: black;
  text-align: center;
  font-family: "Playfair Display";
}

.Collapsible__contentInner {
  background: white;
  border-radius: 4px;
  text-align: center;
}

.CustomTriggerCSS {
  background: #00cc99;
  width: 100%;
}

.block tr {
  text-align: center;
}

.table {
  border-radius: 5px;
  width: 50%;
  margin: 0px auto;
  float: none;
}

.nav-block {
  width: 250px;
  height: 2rem;
  margin: 0.5rem;
  display: inline-block;
  border-radius: 8px;
}

.navbar-inverse {
  background-color: rgba(255, 255, 255, 0.5);
  border-color: #080808;
}

.container-fluid {
  padding-bottom: 8px;
}

.recipe-search {
  text-align: right;
}

.details {
  width: 22rem;
  padding: 10px;
  border: 3px solid gray;
  margin: 0;
  border-radius: inherit;
}

.welcome-h3 {
  color: #00cc99;
}

